--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ramonak/react-progress-bar": "^5.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-donut-chart": "^1.3.3",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
