--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-donut-chart": "^1.3.3",
-    "tailwind": "^4.0.0"
+    "react-router-dom": "^6.26.0",
+    "tailwind": "^4.0.0",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
